add MansfieldAllFullHeuristicWithALLPhones.csv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ConvertFriends/friends.htm
 ConvertFriends/input.htm
 ConvertFriends/output.csv
 ConvertFriends/script.js
+MansfieldAllFullHeuristicWithALLPhones.csv
